// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductDiscountBadge /> should not render with discount if widgetSetting is false 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ProductDiscountBadge)
    productId="1234"
  >
    <ProductDiscountBadge
      discount={12}
      dispatch={[Function]}
      productId="1234"
    >
      <ProductBadges
        className="tss-nay627-portal"
        location="productDiscountBadge"
        portalProps={
          {
            "show": false,
            "style": {
              "label": "customStyle",
            },
          }
        }
        productId="1234"
      >
        <div
          className="tss-qql6jy-root tss-nay627-portal product_badges product_badges__product-discount-badge"
        >
          <SurroundPortals
            portalName="component.product-badges"
            portalProps={
              {
                "location": "productDiscountBadge",
                "productId": "1234",
                "show": false,
                "style": {
                  "label": "customStyle",
                },
              }
            }
          />
        </div>
      </ProductBadges>
    </ProductDiscountBadge>
  </Connect(ProductDiscountBadge)>
</Provider>
`;

exports[`<ProductDiscountBadge /> should render with discount 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ProductDiscountBadge)
    productId="1234"
  >
    <ProductDiscountBadge
      discount={12}
      dispatch={[Function]}
      productId="1234"
    >
      <ProductBadges
        className="tss-nay627-portal"
        location="productDiscountBadge"
        portalProps={
          {
            "show": true,
            "style": {
              "color": "blue",
              "label": "customStyle",
            },
          }
        }
        productId="1234"
      >
        <div
          className="tss-qql6jy-root tss-nay627-portal product_badges product_badges__product-discount-badge"
        >
          <SurroundPortals
            portalName="component.product-badges"
            portalProps={
              {
                "location": "productDiscountBadge",
                "productId": "1234",
                "show": true,
                "style": {
                  "color": "blue",
                  "label": "customStyle",
                },
              }
            }
          >
            <div
              className="tss-1qgq0ze-container tss-1u5v8e-customStyle theme__product__product-discount"
            >
              <SurroundPortals
                portalName="product.discount"
                portalProps={
                  {
                    "discount": 12,
                    "productId": "1234",
                  }
                }
              >
                <DiscountBadge
                  className="tss-j2p5xi-badge"
                  discount={null}
                  display="small"
                  text="-12%"
                >
                  <div
                    aria-label="cart.discount: -12%"
                    className="ui-shared__discount-badge"
                    data-test-id="-12%"
                    tabIndex={-1}
                  >
                    <Text
                      aria-hidden={true}
                      className="tss-yzhxh7-small tss-j2p5xi-badge theme__discount-badge"
                      params={
                        [
                          null,
                        ]
                      }
                      string="-12%"
                    >
                      -12%
                    </Text>
                  </div>
                </DiscountBadge>
              </SurroundPortals>
            </div>
          </SurroundPortals>
        </div>
      </ProductBadges>
    </ProductDiscountBadge>
  </Connect(ProductDiscountBadge)>
</Provider>
`;

exports[`<ProductDiscountBadge /> should render without discount 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ProductDiscountBadge)
    productId="1234"
  >
    <ProductDiscountBadge
      discount={0}
      dispatch={[Function]}
      productId="1234"
    >
      <ProductBadges
        className="tss-nay627-portal"
        location="productDiscountBadge"
        portalProps={
          {
            "show": true,
            "style": {
              "color": "blue",
              "label": "customStyle",
            },
          }
        }
        productId="1234"
      >
        <div
          className="tss-qql6jy-root tss-nay627-portal product_badges product_badges__product-discount-badge"
        >
          <SurroundPortals
            portalName="component.product-badges"
            portalProps={
              {
                "location": "productDiscountBadge",
                "productId": "1234",
                "show": true,
                "style": {
                  "color": "blue",
                  "label": "customStyle",
                },
              }
            }
          />
        </div>
      </ProductBadges>
    </ProductDiscountBadge>
  </Connect(ProductDiscountBadge)>
</Provider>
`;
